tested uuid and eventtype functions

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
             </exclusions>
         </dependency>
 
+        <!--解决无法找到datasource-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
 
         <!--MySql-->
         <dependency>
