--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
             <version>5.1.35</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.11</version>
+        </dependency>
+
         <!--dbcp2连接池-->
         <dependency>
             <groupId>org.apache.commons</groupId>
