--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,5 +31,8 @@ spring.datasource.dbcp2.validation-query=SELECT 1
 # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
 spring.datasource.dbcp2.time-between-eviction-runs-millis=60000
 
+spring.jackson.date-format = yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone = GMT+8
+
 mybatis.typeAliasesPackage=com.bdilab.sharedcalendar.vo
 mybatis.mapperLocations=classpath:mapper/*.xml
