--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,9 +28,10 @@ spring.datasource.dbcp2.min-idle=5
 spring.datasource.dbcp2.max-wait-millis=10000
 #SQL查询,用来验证从连接池取出的连接,在将连接返回给调用者之前.如果指定,则查询必须是一个SQL SELECT并且必须返回至少一行记录
 spring.datasource.dbcp2.validation-query=SELECT 1
-# 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+#配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
 spring.datasource.dbcp2.time-between-eviction-runs-millis=60000
 
+#配置返回给前端的Date类型的格式和时区
 spring.jackson.date-format = yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone = GMT+8
 
